--- a/1.html
+++ b/1.html
@@ -1,19 +1,21 @@
-<!doctype html>
-<html>
-<head>
-  <title>WEB1 - html</title>
-  <meta charset="utf-8">
-</head>
-<body>
-  <h1><a href="index.html">Web</a></h1>
-  <ol>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>JavaScript</li>
-  </ol>
-  <h2>HTML</h2>
-  <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification"> Hypertext Markup Language (HTML)</a>is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
-  </p><p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.
-  </p>
-</body>
-</html>
+<h1><a href="index.html">WEB</a></h1>
+<h2 style="background-color:coral;color:powderblue;">JavaScript</h2>
+<input type="text" onkeydown="alert('손 때')">
+<input type="button" value="night" onclick="alert('gang')">
+<style>
+    .js{
+        font-weight: bolder;
+        color: #000000;
+    }
+</style>
+<p>
+    <span id="first" class="js">JavaScript</span> (/ˈdʒɑːvəˌskrɪpt/[6]), often abbreviated as JS, is a high-level,
+    dynamic, weakly typed, prototype-based, multi-paradigm, and interpreted programming language. Alongside
+    <span>HTML</span> and <span>CSS</span>, <span class="js">JavaScript</span> is one of the three core technologies of
+    World Wide Web content production. It is used to make webpages interactive and provide online programs, including
+    video games. The majority of websites employ it, and all modern web browsers support it without the need for
+    plug-ins by means of a built-in <span class="js">JavaScript</span> engine. Each of the many <span
+        class="js">JavaScript</span> engines represent a different implementation of <span class="js">JavaScript</span>,
+    all based on the ECMAScript specification, with some engines not supporting the spec fully, and with many engines
+    supporting additional features beyond ECMA.
+</p>
